# blackbox

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
blackbox/: __init__.py  config.py  worker.py
blackbox/activities/: fraud_check.py
blackbox/dashboard/: app.py
blackbox/export/: duckdb_export.py
blackbox/fraud_api/: scorer.py
blackbox/models/: __init__.py  data.py
blackbox/utils/: data_generator.py
blackbox/workflows/: order_fraud.py
docs/: PRD.md
scripts/: export_to_duckdb.py  register_search_attributes.sh  run_simulation.py  validate_data.py
tests/: test_core.py
