[project]
name = "blackbox"
version = "0.1.0"
description = "AI-powered investigation for third-party integrations via Temporal workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    # Core
    "temporalio>=1.7.0",
    "duckdb>=1.1.0",

    # Data generation
    "faker>=30.0.0",

    # AI Agent
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",

    # Dashboard
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "gradio>=5.0.0",

    # Utilities
    "pydantic>=2.9.0",
    "python-dateutil>=2.9.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
